samples/_failures_safe/1761171972_ec5555_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d11d2773.c: In function ‘main’:
./samples/SAFE/__tmp_d11d2773.c:162:9: error: expected declaration or statement at end of input
  162 |         print_state_info(&sm);
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d11d2773.c:162:9: error: expected declaration or statement at end of input
